--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
         }
       }
     },
-    "commands": [{
+    "commands": [
+      {
         "command": "ng-evergreen.angularEvergreen",
         "title": "Launch Angular Evergreen",
         "category": "Angular Evergreen"
